--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,11 @@
             android:screenOrientation="portrait"
             ></activity>
 
+        <activity
+            android:name=".activities.LoginActivity"
+            android:screenOrientation="portrait"
+            ></activity>
+
     </application>
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
