--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,7 @@
             android:name=".activities.LoginActivity"
             android:screenOrientation="portrait"
             ></activity>
+        <activity android:name=".activities.NewPasswordActivity" />
 
     </application>
 
